fixing overflows

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -261,7 +261,7 @@ a {
 
 .viewTitle {
   color: rgba(0, 0, 0, 0.8);
-  max-width: 50vw;
+  max-width: 45vw;
   overflow: auto;
 }
 
